# foundax

./: LICENSE  README.md  THIRD_PARTY_LICENSES  mkdocs.yml  pyproject.toml  results.json
.github/workflows/: docs.yml  publish.yml
docs/: core-models.md  equinox-architectures.md  getting-started.md  github-pages.md  index.md  model-examples.md
docs/stylesheets/: extra.css
foundax/: __init__.py  _callable_module.py  _vendors.py  bcat.py  cli.py  dpot.py  model.py  morph.py  mpp.py  nn.py  pdeformer2.py  poseidon.py  prose.py  walrus.py
foundax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
foundax/architectures/: __init__.py  common.py  fno.py  mlp.py  transformer.py  unet.py
repos/jax_bcat/: .gitignore  README.md  pyproject.toml
repos/jax_bcat/jax_bcat/: __init__.py  configs.py  convert_weights.py  model.py  model_eqx.py
repos/jax_bcat/scripts/: compare.py  convert.py
repos/jax_dpot/: .gitignore  README.md  pyproject.toml
repos/jax_dpot/jax_dpot/: __init__.py  configs.py  convert_weights.py  filter_networks.py  model.py  model_3d.py  model_eqx.py  model_res.py  utils.py
repos/jax_morph/: .gitignore
repos/jax_morph/jax_morph/: __init__.py  configs.py  model_eqx.py  positional_encoding.py
repos/jax_mpp/jax_mpp/: __init__.py  avit.py  avit_eqx.py  configs.py
repos/jax_pdeformer2/: .gitignore  README.md  pyproject.toml
repos/jax_pdeformer2/jax_pdeformer2/: __init__.py  basic_block.py  convert_checkpoint.py  function_encoder.py  graphormer.py  inr_with_hypernet.py  model_eqx.py  pdeformer.py  utils.py
repos/jax_pdeformer2/scripts/: compare.py  convert.py
repos/jax_pdeformer2/tests/: inspect_fast_checkpoint.py  test_all_checkpoints.py  test_components.py  test_equivalence.py  test_model.py
repos/jax_poseidon/: .gitignore  README.md  pyproject.toml
repos/jax_poseidon/jax_poseidon/: __init__.py  load.py  scot.py  scot_eqx.py
repos/jax_poseidon/scripts/: compare.py  convert.py
repos/jax_poseidon/tests/: test_model.py
repos/jax_prose/: README.md  pyproject.toml
repos/jax_prose/jax_prose/: __init__.py  config.py  embedder.py  load.py  model_eqx.py  prose_fd.py  prose_fd_2to1.py  prose_ode_pde_2to1.py  transformer.py
repos/jax_prose/scripts/: compare.py  compare_ode.py  compare_pde.py  convert.py  convert_ode.py  convert_pde.py
repos/jax_prose/tests/: test_prose_fd_1to1.py  test_prose_ode_pde_2to1.py
repos/jax_walrus/: .gitignore
repos/jax_walrus/jax_walrus/: __init__.py  model_eqx.py
scripts/: compare.py  convert.py  convert_flax_to_eqx.py  heatmap.py  ms_pdeformer_helper.py
site/: 404.html  index.html  sitemap.xml
site/core-models/: index.html
site/equinox-architectures/: index.html
site/getting-started/: index.html
site/github-pages/: index.html
site/model-examples/: index.html
site/search/: search_index.json
tests/: test_bcat_eqx.py  test_dispatch.py  test_dpot_eqx.py  test_heavy_models.py  test_morph_eqx.py  test_mpp_eqx.py  test_namespace.py  test_pdeformer2_eqx.py  test_poseidon_eqx.py  test_prose_eqx.py  test_vendors.py  test_walrus_eqx.py
