[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundax"
version = "0.1.0"
description = "One-stop JAX foundation model dispatch repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "flax>=0.8",
]

[project.scripts]
foundax-convert = "foundax.cli:convert_entry"
foundax-compare = "foundax.cli:compare_entry"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["foundax*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["repos", ".venv", "build", "dist"]
markers = [
    "heavy: slow integration tests for large model construction and single-step autodiff",
]
