[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundax"
version = "0.1.3"
description = "One-stop JAX foundation model repository"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "flax>=0.8",
    "equinox>=0.11",
    "einops",
]

[project.scripts]
foundax-convert = "foundax.cli:convert_entry"
foundax-compare = "foundax.cli:compare_entry"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["foundax*", "jax_bcat*", "jax_dpot*", "jax_morph*", "jax_mpp*", "jax_pdeformer2*", "jax_poseidon*", "jax_prose*", "jax_walrus*"]
where = [".", "repos/jax_bcat", "repos/jax_dpot", "repos/jax_morph", "repos/jax_mpp", "repos/jax_pdeformer2", "repos/jax_poseidon", "repos/jax_prose", "repos/jax_walrus"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["repos", ".venv", "build", "dist"]
markers = [
    "heavy: slow integration tests for large model construction and single-step autodiff",
]
