[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdeformer2-jax"
version = "0.1.0"
description = "JAX/Flax implementation of PDEformer-2, a neural operator for solving PDEs"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Leon Armbruster", email = "leonarmbruster@iisb.fraunhofer.de" }]

keywords = ["pde", "neural-operator", "jax", "flax", "deep-learning", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]
convert = [
    "mindspore>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["jax_pdeformer2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=7.0"]
