[project]
name = "jax_prose"
version = "0.1.0"
description = "JAX/Flax translation of PROSE-FD models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Leon Armbruster" }]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "flax>=0.10",
    "jax>=0.5",
    "jaxlib>=0.5",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jax_prose"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=7.0"]
